<resources>
    <string name="app_name">AndroidProject</string>
    <string name="create_new_album">Create New Album</string>
    <string name="tag_1_value_hint">Tag 1 Value</string>
    <string name="tag_2_value_hint">Tag 2 Value (Optional)</string>
    <string name="search_photos">Search Photos</string>
    <string name="search_results">Search Results:</string>
    <string name="single_tag">Single Tag</string>
    <string name="logic_and">AND</string>
    <string name="logic_or">OR</string>
    <string name="add_photo">Add Photo</string>
    <string name="back_to_albums">Back to Albums</string>
    <string name="back">Back</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="add_tag">Add Tag</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="tags_label">Tags:</string>
    <string name="photo_options">Photo Options</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="move_photo">Move Photo</string>
    <string name="copy_photo">Copy Photo</string>
    <string name="move_to_album">Move to Album</string>
    <string name="copy_to_album">Copy to Album</string>
    <string name="no_other_albums">No other albums available.</string>
    <string name="moved_success">Moved successfully.</string>
    <string name="copied_success">Copied successfully.</string>
    <string name="photo_exists_target">Photo already exists in target album.</string>
    <string name="select_tag_type">Select Tag Type</string>
    <string name="enter_tag_value">Enter value for %1$s</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="tag_already_exists">Tag already exists</string>
    <string name="remove_tag_confirm_title">Remove Tag</string>
    <string name="remove_tag_confirm_msg">Do you want to remove %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_tag_instruction">Long-press a tag in the list to remove it.</string>
    <string name="no_photos_found">No photos found.</string>
    <string name="tag_1_required">Tag 1 Value is required.</string>
    <string name="tag_2_required">Tag 2 Value is required for AND/OR searches.</string>
    <string name="create">Create</string>
    <string name="album_name_empty">Album name cannot be empty.</string>
    <string name="album_exists">Album already exists.</string>
    <string name="rename_album">Rename Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="album_options">Album Options</string>
    <string name="rename">Rename</string>
    <string name="delete_confirm_msg">Are you sure you want to delete \'%1$s\'?</string>
</resources>